--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>My Assignments</h1>
         <ul>
-            <li><a href="assignment1.html">Assignment 1</a></li>
-            <li><a href="assignment2.html">Assignment 2</a></li>
-            <li><a href="assignment3.html">Assignment 3</a></li>
-            <li><a href="assignment4.html">Assignment 4</a></li>
-            <li><a href="assignment5.html">Assignment 5</a></li>
-            <li><a href="assignment6.html">Assignment 6</a></li>
+            <li><a href="CSS Assignment 1/">Assignment 1</a></li>
+            <li><a href="CSS Assignment 2/">Assignment 2</a></li>
+            <li><a href="CSS Assignment 3/">Assignment 3</a></li>
+            <li><a href="CSS Assignment 4/">Assignment 4</a></li>
+            <li><a href="CSS Assignment 5/">Assignment 5</a></li>
+            <li><a href="CSS Assignment 6/">Assignment 6</a></li>
         </ul>
     </div>
 </body>
