WIP: progress so far

--- a/CSS Assignment 1/index.html
+++ b/CSS Assignment 1/index.html
@@ -13,8 +13,8 @@
         <div class="card">
             <div class="card-header">An Otter Essay</div>
             <div class="card-body">
-                <p>Otters have long, slim bodies and relatively short limbs.
-                    Their most striking anatomical features are the powerful webbed feet used to swim, and their
+                <p>Otters have long, slim bodies and relatively <br> short limbs.Their most striking anatomical <br> features are the powerful webbed feet <br>
+                    used to swim, and their
                     seal-like abilities holding breath underwater.</p>
             </div>
         </div>
