Still in Progress

--- a/CSS Assignment 3/index.html
+++ b/CSS Assignment 3/index.html
@@ -14,7 +14,8 @@
         </div>
         <div class="content">
             <div class="title">Novus Watch <span class="subtitle">Series IV</span></div>
-            <p class="description">The pinnacle of fashion and tech. This wearable piece is an homage to gilded palaces and minimal regalia, combining nouveau-deco and brutalism influences in a compact, Swiss-made watch.</p>
+            <p class="description">The pinnacle of fashion and tech. This wearable <br> piece is an homage to gilded palaces and minimal <br> regalia, 
+                combining nouveau-deco and brutalism <br> influences in a compact, Swiss-made watch.</p>
         </div>
     </div>
 </body>
