--- a/CSS Assignment 4/index.html
+++ b/CSS Assignment 4/index.html
@@ -1,64 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up | Individual</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="info">
+        <div class="left-section">
+            <img src="images/Logo.png">
             <h2>For Individuals</h2>
-            <p>Start benefiting from the wellness experience. For companies looking to increase productivity and improve organization wellness.</p>
+            <p>Start benefiting from the wellness experience. For <br> companies looking on increasing productivity, and
+                improving <br> organization wellness.</p>
         </div>
         <div class="form-container">
             <form>
-                <div class="form-group-row">
-                    <div class="form-group">
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" placeholder="First Name" value="Tolu">
-                    </div>
-                    <div class="form-group">
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" placeholder="Last Name">
-                    </div>
-                </div>
-                <div class="form-group-row">
-                    <div class="form-group">
-                        <label for="gender">Gender</label>
-                        <select id="gender">
-                            <option>Select Gender</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="dob">Date of Birth</label>
-                        <input type="date" id="dob" placeholder="Date of Birth">
-                    </div>
-                </div>
-                <div class="form-group-row">
-                    <div class="form-group">
-                        <label for="weight">Weight (KG)</label>
-                        <input type="number" id="weight" placeholder="Weight (KG)">
-                    </div>
-                    <div class="form-group">
-                        <label for="height">Height (CM)</label>
-                        <input type="number" id="height" placeholder="Height (CM)">
-                    </div>
+
+                <div class="form-group">
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-name" placeholder="Tolu">
                 </div>
                 <div class="form-group">
-                    <label for="activity">Activity Level</label>
-                    <select id="activity">
-                        <option>Select Activity Level</option>
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-name" placeholder="Enter Last Name">
+                </div>
+
+                <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <select id="gender">
+                        <option value="" disabled selected>Select here</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
                     </select>
                 </div>
+
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Password">
+                    <label for="dob">Date of Birth</label>
+                    <input type="date" id="dob">
                 </div>
-                <button type="submit">Register</button>
+
+                <div class="form-group">
+                    <label for="weight">Weight (KG)</label>
+                    <input type="text" id="weight" placeholder="Enter Weight">
+                </div>
+
+                <div class="form-group">
+                    <label for="height">Height (CM)</label>
+                    <input type="text" id="height" placeholder="Enter height here..">
+                </div>
+
+                <div class="form-group" style="grid-column: span 2;">
+                    <label for="activity">Activity Level</label>
+                    <select id="activity">
+                        <option>Select here</option>
+                    </select>
+                </div>
+
+                <div class="form-group" style="grid-column: span 2;">
+                    <label for="password">Password</label>
+                    <input type="password" id="password">
+                </div>
+                <button type="submit" class="register-btn">Register</button>
+                <p class="terms">By clicking Register, you agree to our <a href="#"><u>Terms of Use</u></a> and our <a
+                        href="#"><u>Privacy Policy</u></a></p>
             </form>
-            <p class="terms">By clicking Register, you agree to our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>.</p>
+
         </div>
     </div>
 </body>
