--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Assignments</h1>
+        <h1>MY ALTSCHOOL CSS Assignment</h1>
+        <div class="Personal-Infor">
+            <p>Karabo Malatji</p>
+            <p>ALT/SOE/024/1820</p>
+            <p>Cloud Engineering</p>
+        </div>
         <ul>
             <li><a href="CSS Assignment 1/">Assignment 1</a></li>
             <li><a href="CSS Assignment 2/">Assignment 2</a></li>
