--- a/index.html
+++ b/index.html
@@ -4,24 +4,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignments Landing Page</title>
-   
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Default styles for larger screens */
+        body {
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+            background-image: url('wallpaperflare.com_wallpaper\ \(2\).jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            padding: 0;
+            overflow: hidden;
+            /* Prevents scrollbars from appearing */
+        }
+
+        /* Adjust styles for smaller screens (e.g., 1280px width) */
+        @media (max-width: 1280px) {
+            body {
+                background-size: contain;
+                /* Fit the entire image without cropping */
+            }
+        }
+
+        .assignments {
+            display: flex;
+            align-items: center;
+            padding-top: 15%;
+          
+        }
+
+        .content-1 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+            border: gray;
+            color: black;
+        }
+
+        .content-2 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+            border: gray;
+            color: black;
+        }
+        .content-3 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+            border: gray;
+            color: black;
+        }.content-4 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+            border: gray;
+            color: black;
+        }.content-5 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+
+        }.content-6 {
+            background-color: white;
+            padding: 10px 80px 10px 80px;
+            border-radius: 50px;
+        }
+
+        .Personal-Infor {
+
+            border: solid white;
+            border-radius: 100px;
+            display: flex;
+            align-items: center;
+            padding-left: 30%;
+            gap: 20px;
+            margin-top: 10%;
+            background-color: white;
+        }
+
+        .altschool {
+            display: flex;
+            padding-left: 12%;
+            border: solid white;
+            border-radius: 100px;
+            margin-left: 25%;
+            margin-right: 25%;
+            background-color: white;
+            margin-top: 20px;
+
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
-        <h1>MY ALTSCHOOL CSS Assignment</h1>
-        <div class="Personal-Infor">
-            <p>Karabo Malatji</p>
-            <p>ALT/SOE/024/1820</p>
-            <p>Cloud Engineering</p>
+        <div class="altschool">
+            <h2>My ALTSCHOOL CSS Assignments</h2>
         </div>
-        <ul>
-            <li><a href="CSS Assignment 1/">Assignment 1</a></li>
-            <li><a href="CSS Assignment 2/">Assignment 2</a></li>
-            <li><a href="CSS Assignment 3/">Assignment 3</a></li>
-            <li><a href="CSS Assignment 4/">Assignment 4</a></li>
-            <li><a href="CSS Assignment 5/">Assignment 5</a></li>
-            <li><a href="CSS Assignment 6/">Assignment 6</a></li>
-        </ul>
+
+        <div class="Personal-Infor">
+            <p>KARABO MALATJI</p>
+            <p>karabosteve2@gmail.com</p>
+            <p>ALT/SOE/024/1820</p>
+            <p>CLOUD ENGINEERING</p>
+        </div>
+
+        <div class="assignments">
+            <div class="assignment1">
+                <div class="content-1">
+                    <a href="./CSS Assignment 1/">Assignment 1</a>
+                </div>
+            </div>
+
+            <div class="assignment2">
+                <div class="content-2">
+                    <a href="./CSS Assignment 2/">Assignment 2</a>
+                </div>
+            </div>
+
+            <div class="assignment3">
+                <div class="content-3">
+                    <a href="./CSS Assignment 3/">Assignment 3</a>
+                </div>
+            </div>
+
+            <div class="assignment4">
+                <div class="content-4">
+                    <a href="./CSS Assignment 4/">Assignment 4</a>
+                </div>
+            </div>
+
+            <div class="assignment5">
+                <div class="content-5">
+                    <a href="./CSS Assignment 5/">Assignment 5</a>
+                </div>
+            </div>
+
+            <div class="assignment6">
+                <div class="content-6">
+                    <a href="./CSS Assignment 6/">Assignment 6</a>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
