--- a/CSS Assignment 1/index.html
+++ b/CSS Assignment 1/index.html
@@ -14,9 +14,8 @@
             <div class="card-header">An Otter Essay</div>
             <div class="card-body">
                 <p>Otters have long, slim bodies and relatively <br> short limbs.
-                    Their most striking anatomical <br> features are the powerful webbed feet <br>
-                    used to swim, and their
-                    seal-like abilities holding breath underwater.</p>
+                    Their most striking anatomical<br>features are the powerful webbed feet <br>
+                    used to swim, and their seal-like abilities <br> holding breath underwater.</p>
             </div>
         </div>
     </div>
